Resolving bug gap error on works

--- a/css-v2/styles-v2.css
+++ b/css-v2/styles-v2.css
@@ -430,9 +430,10 @@ h1 {
 .works-sticky-wrapper {
   position: sticky;
   top: 100px;
+  height: 0;
   z-index: 500;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   padding: 0 3vw;
   /* Extreme edges */
@@ -2382,7 +2383,7 @@ h1 {
   position: relative;
   width: 100%;
   max-width: 1000px;
-  margin: 4rem auto;
+  margin: 1.5rem auto 4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
